--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
-div.wrapper {
-    width: 100%;
+
+
+
+
+
+
+.slide-collage img{
+    width: 120px;
     height: 120px;
-    background-color: #fff;
-    z-index: 9000;
-    transition: all 0.3s ease;
 }
