--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,51 @@ section {
     width: 100%;
     height: 100%;
 }
+
+.image-wrapper{
+    position: relative;
+    overflow: hidden;
+
+}
+.image-wrapper img{
+    display: block;
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    object-position: center;
+}
+.image-wrapper .content{
+    position: absolute;
+    inset: 0;
+    font-size: 1rem;
+    padding: 1rem;
+    background: rgb(255, 255, 255, .4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.image-wrapper img,
+.image-wrapper .content{
+    transition: 200ms ease-in-out;
+
+}
+.image-wrapper:hover img.zoom{
+    transform: scale(1.1) ;
+}
+.image-wrapper:hover img.blur{
+    filter: blur(3px);
+}
+
+
+.image-wrapper .content.fade{
+    opacity: 0;
+}
+.image-wrapper:hover .content.fade{
+    opacity: 1;
+}
+
+
+
 .Booking{
     border: none;
 }
