--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,19 @@ section {
     width: 100%;
     height: 100%;
 }
+.Hisha2{
+    width: 100%;
+    height: 277px
+}
+.Hilsha-project{
+    padding: 5px;
+}
+.Ilish-img{
+    padding: 5px;
+}
+.elish-img{
+    border-radius: 8px;
+}
 
 .image-wrapper{
     position: relative;
@@ -106,5 +119,10 @@ section {
     width: 60px;
     height: 60px;
     
-    
+}
+.search_btn{
+    background-color: #20c1ef;
+    padding: 0.5rem 8rem;
+    color: #ffff;
+    border-radius: 0;
 }
