--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,16 @@ section {
     line-height: 33px;
     font-weight: 700;
 }
+.carousel-inner {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+.carousel-item img {
+    width: 100%;
+    height:400px;
 
-
+}
 .carousel-caption{
     position: absolute;
     right: 15%;
@@ -52,10 +60,7 @@ section {
 
 
 
-.carousel-item img {
-    width: 100%;
-    height: 100%;
-}
+
 .Hisha2{
     width: 100%;
     height: 277px
